Squashed commit of the following:
commit 326c23727b5a5bacde2ec509e2c7d615292ad407
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 16:48:40 2025 +0300

    test: add UserService registration unit tests

commit e346848f4bec832d629ef68710bcb7efa593b43d
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 16:47:58 2025 +0300

    feat: improve UserService exception consistency

commit 6ffd61261bccb5e73ab40a9af1822b6c1ca71a51
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 16:47:37 2025 +0300

    test: add UserController and UserRepository tests

commit 07e196e7b8f6504e505d4336b3389fa7ba554786
Author: IWKMS99 <alievsaid0909@yandex.ru>
Date:   Fri Jun 13 16:47:13 2025 +0300

    feat: add Testcontainers for PostgreSQL integration tests