@@ -47,9 +47,14 @@ dependencies {
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("org.springframework.kafka:spring-kafka-test")
 	testImplementation("org.springframework.security:spring-security-test")
+	testImplementation("org.testcontainers:junit-jupiter:1.20.2")
+	testImplementation("org.testcontainers:testcontainers:1.20.2")
+	testImplementation("org.testcontainers:postgresql:1.20.2")
+	testImplementation("org.postgresql:postgresql:42.7.4")
+	testImplementation("org.junit.jupiter:junit-jupiter:5.11.3")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
-
 tasks.withType<Test> {
-	useJUnitPlatform()
+    useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
